--- a/Good-Eatin/src/app/components/header/header.component.html
+++ b/Good-Eatin/src/app/components/header/header.component.html
@@ -1,7 +1,9 @@
 <div *ngIf="authService.isLoggedIn()" class="header">
   <a [routerLink]="['']" routerLinkActive="router-link-active"  class="logo"><img src="https://firebasestorage.googleapis.com/v0/b/meal-plan-generator-745c7.appspot.com/o/sitePics%2Flogo.png?alt=media&token=b16f3fc8-919b-4e2e-bfc8-c7806decea78" alt="logo"></a>
   <div  class="header-right">
-    <a [routerLink]="['/calendar']" routerLinkActive="router-link-active" >Calendar</a> 
+    <a [routerLink]="['/calendar']" routerLinkActive="router-link-active">Calendar</a> 
+    <a [routerLink]="['/shoppingList']" routerLinkActive="router-link-active">Shopping List</a> 
+    <a [routerLink]="['/addRecipe']" routerLinkActive="router-link-active">Add Recipe</a> 
     <a [routerLink]="['/explore']" routerLinkActive="router-link-active" >Explore</a> 
     <a [routerLink]="['/profile']" routerLinkActive="router-link-active" >Profile</a> 
     <a href="" (click)="authService.logout()">Logout</a> 
