--- a/Good-Eatin/src/app/pages/edit-week/edit-week.component.html
+++ b/Good-Eatin/src/app/pages/edit-week/edit-week.component.html
@@ -1,3 +1,46 @@
-<p>
-  edit-week works!
-</p>
+<div class="editWeek">
+  <h1>Editing {{daysOfWeek[day]}}</h1>
+  <button class="previousDay"(click)="changeDays(true)">(-</button>
+  <div class="day">
+    <div class= "meal">
+      <h2>Breakfast</h2>
+        <div class="recipe" *ngFor="let recipe of week.daysOfWeek[day].breakfast; let i = index">
+          <img src="{{recipe.picture}}" alt="{{recipe.title}}Pic">
+          <h5>{{recipe.title}}</h5>
+          <button (click)="removeRecipe(day, 'breakfast', i)">Remove</button>
+        </div>
+        <p *ngIf=" 1 > week.daysOfWeek[day].breakfast.length">No meals selected for breakfast. Select a recipe from the list to add it.</p>
+        <select class="addRecipeComboBox" (change)="addRecipe(day, 'breakfast', $event.target.value)">
+          <option value="-1">Select a breakfast Recipe</option>
+          <option *ngFor="let newRecipe of breakfastRecipeList; let j = index" value="{{j}}">{{newRecipe.title}}</option>
+        </select>
+    </div>
+    <div class= "meal">
+      <h2>Lunch</h2>
+      <div class="recipe" *ngFor="let recipe of week.daysOfWeek[day].lunch; let i = index">
+          <img src="{{recipe.picture}}" alt="{{recipe.title}}Pic">
+          <h5>{{recipe.title}}</h5>
+          <button (click)="removeRecipe(day, 'lunch', i)">Remove</button>
+        </div>
+        <p *ngIf=" 1 > week.daysOfWeek[day].lunch.length">No meals selected for lunch. Select a recipe from the list to add it.</p>
+        <select class="addRecipeComboBox" (change)="addRecipe(day, 'lunch', $event.target.value)">
+          <option value="-1">Select a lunch Recipe</option>
+          <option *ngFor="let newRecipe of lunchRecipeList; let j = index" value="{{j}}">{{newRecipe.title}}</option>
+        </select>
+    </div>
+    <div class= "meal">
+      <h2>Dinner</h2>
+      <div class="recipe" *ngFor="let recipe of week.daysOfWeek[day].dinner; let i = index">
+        <img src="{{recipe.picture}}" alt="{{recipe.title}}Pic">
+        <h5>{{recipe.title}}</h5>
+        <button (click)="removeRecipe(day, 'dinner', i)">Remove</button>
+      </div>
+      <p *ngIf=" 1 > week.daysOfWeek[day].dinner.length">No meals selected for dinner. Select a recipe from the list to add it.</p>
+      <select class="addRecipeComboBox" (change)="addRecipe(day, 'dinner', $event.target.value)">
+        <option value="-1">Select a dinner Recipe</option>
+        <option *ngFor="let newRecipe of dinnerRecipeList; let j = index" value="{{j}}">{{newRecipe.title}}</option>
+      </select>
+    </div>
+  </div>
+  <button class="previousDay" (click)="changeDays(false)">-)</button>
+</div>
