--- a/Good-Eatin/src/app/pages/landing/landing.component.css
+++ b/Good-Eatin/src/app/pages/landing/landing.component.css
@@ -1,20 +1,30 @@
+@font-face {
+    font-family: bebasNeue;
+    src: url(https://firebasestorage.googleapis.com/v0/b/meal-plan-generator-745c7.appspot.com/o/fonts%2FBebasNeue%20Regular.otf?alt=media&token=7cd0995f-da9c-4c86-958f-ae97714ba7e0);
+}
 .logo{
     width: 400px;
 }
 
-.description {
+.descriptions {
     display: flex;
-    justify-content: left;
+    justify-content: space-around;
     flex-wrap: wrap;
+}
+.description {
+    max-width: 30%;
+    min-width: 350px;
 }
 .description p {
     font-size: 120%;
 }
-.description h2 {
+h1 {
     width: 100%;
-    align-items: center;
+    font-size: 500%;
+    text-align: center;
+    font-family: bebasNeue;
 }
 .description img {
-    max-width: 50%;
+    max-width: 100%;
     max-height: 500px;
 }
